# ray-tracing

./: CMakeLists.txt
src/: Ellipsoid.cpp  Light.cpp  ObjShape.cpp  Plane.cpp  Ray.cpp  Scene.cpp  Shape.cpp  Sphere.cpp  Triangle.cpp  main.cpp
